added superflluid functions

--- a/peernet/src/App.css
+++ b/peernet/src/App.css
@@ -37,175 +37,6 @@
     transform: rotate(360deg);
   }
 }
-/* cards */
-.card {
-  --background: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
-  width: 400px;
-  height: 500px;
-  padding: 5px;
-  border-radius: 1rem;
-  overflow: visible;
-  background: #f7ba2b;
-  background: var(--background);
-  position: relative;
-  z-index: 1;
- }
- 
- .card::after {
-  position: absolute;
-  content: "";
-  top: 30px;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  transform: scale(0.8);
-  filter: blur(25px);
-  background: #f7ba2b;
-  background: var(--background);
-  transition: opacity .5s;
- }
- 
- .card-info {
-  --color: #181818;
-  background: var(--color);
-  color: var(--color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  overflow: visible;
-  border-radius: .7rem;
- }
- 
- .card .title {
-  font-weight: bold;
-  letter-spacing: .1em;
- }
- 
- /*Hover*/
- .card:hover::after {
-  opacity: 0;
- }
- 
- .card:hover .card-info {
-  color: #f7ba2b;
-  transition: color 1s;
- }
- /* rotating card */
- .Rotating_card {
-  width: 20%;
-  height: 80%;
-  background: #181818;
-  position: relative;
-  display: flex;
-  place-content: center;
-  place-items: center;
-  overflow: hidden;
-  border-radius: 20px;
-  margin-right: 40px;
-}
 
-.Rotating_card h2 {
-  z-index: 1;
-  color: white;
-  font-size: 2em;
-}
 
-.Rotating_card::before {
-  content: '';
-  position: absolute;
-  width: 100px;
-  background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
-  height: 130%;
-  animation: rotBGimg 3s linear infinite;
-  transition: all 1s linear;
-}
-
-@keyframes rotBGimg {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.Rotating_card::after {
-  content: '';
-  position: absolute;
-  background: #181818;
-  ;
-  inset: 5px;
-  border-radius: 15px;
-} 
-
-/* .Rotating_card:hover:before {
-  background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
-  animation: rotBGimg 3.5s linear infinite;
-} */
-/* container allignment */
-.Row {
-  background-color: #181818;
-  height:100vh;
-  display: flex;
-  flex-direction: row;
-}
-.Column {
-  background-color: #181818;
-  height:100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.left-div {
-  width: 50%;
-  height: 200px;
-}
-
-.right-div {
-  width: 50%;
-  height: 400px;
-}
-
-/* navbar styles */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  font-size: 1.2rem;
-}
-
-.navbar.light {
-  background-color: #f2f2f2;
-  color: #181818;
-}
-
-.navbar.dark {
-  background-color: #181818;
-  color: #f2f2f2;
-}
-
-ul {
-  display: flex;
-  list-style: none;
-}
-
-li {
-  margin-right: 20px;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
+/* -------------------------------superfluid classes----------------------------------- */
