--- a/peernet/src/components/accountcard.css
+++ b/peernet/src/components/accountcard.css
@@ -1,5 +1,5 @@
 .accountcard {
-    margin: 20px;
+    margin: 60px;
     padding: 20px;
     width: 300px;
     min-height: 200px;
@@ -148,4 +148,10 @@
     top: -45%;
     background-color: #009087;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+  }
+ img{
+    position: relative;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.9);
+    width: 30%;
   }
