--- a/peernet/src/components/vpnconnectcard.css
+++ b/peernet/src/components/vpnconnectcard.css
@@ -1,6 +1,6 @@
 .card {
     width: 400px;
-    height: 600px;
+    height: 550px;
     background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
     border-radius: 20px;
     transition: all .3s;
@@ -8,7 +8,7 @@
    
    .card2 {
     width: 400px;
-    height: 600px;
+    height: 550px;
     background-color: #1a1a1a;
     border-radius: 20px;
     transition: all .2s;
@@ -23,4 +23,9 @@
    
    .card:hover {
     box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+   }
+   .card2 img{
+    width: 60%;
+    margin-left: 20%;
+    padding-top: 30%;
    }
