--- a/peernet/src/App.css
+++ b/peernet/src/App.css
@@ -48,5 +48,7 @@
   }
 }
 
-
+.Column{
+  padding: 20px;
+}
 /* -------------------------------superfluid classes----------------------------------- */
